# Grotto

./: .dockerignore  .gitattributes  .gitignore  Brewfile  Containerfile  Containerfile.browser-runtime-headless  Containerfile.browser-runtime-visible  Containerfile.chatgpt-desktop  Containerfile.claude-desktop  LICENSE  Makefile  README.md
defaults/: openclaw.base.json5
docs/: browser-runner.md  browser-runtime-contract.md  capability-model.md  chatgpt-desktop-sandbox.md  chatgpt-desktop-security-policy.md  chatgpt-desktop.md  claude-desktop.md  documents-runner.md  image-matrix.md  kubernetes-documents-worker.md  kubernetes-vic-browser-runtime.md  nereus-integration.md  openclaw.md  orchestrator-integration.md  vic-browser-worker.md  vic-integration.md  worker-contract.md
files/: grotto-openclaw-entrypoint
quadlet/: openquad.container  openquad.network
schemas/: openquad-artifact-manifest.schema.json  openquad-event.schema.json  openquad-policy-decision.schema.json  openquad-task-result.schema.json  openquad-task.schema.json  openquad-worker-manifest.schema.json
scripts/: __init__.py  smoke_browser_container.sh  smoke_documents_container.sh  validate_openquad_contracts.py
tests/: chatgpt-desktop-runtime.sh  claude-desktop-runtime.sh  test_claude_window_manager_config.py  test_codex_desktop_linux_patch.py  test_grotto_doctor.py  (+2 more)
workerd/: pyproject.toml
workerd/openquad_workerd/: __init__.py  artifacts.py  contracts.py  events.py  manifest.py  runners.py  runners_browser.py  runners_documents.py  server.py  task_store.py
workerd/tests/: test_workerd.py
(+77 files in other folders)
