[project]
name = "openquad-workerd"
version = "0.1.0"
description = "Generic OpenQuad Worker Contract v0.1 daemon"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "jsonschema>=4.23",
  "playwright>=1.50",
]

[project.scripts]
openquad-workerd = "openquad_workerd.server:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openquad_workerd"]
